gitOps/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  prod
  namespace:  prod
spec:
  selector:
    matchLabels:
      app:  prod

  replicas: 1
  template:
    metadata:
      labels:
        app:  prod

    spec:
      containers:
        - name: app
          image: ghcr.io/imranqutab/go-app:latest
          ports:
            - containerPort: 6500
      imagePullSecrets:
      - name: 
# appname:  prod
