gitOps/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  dev
  namespace:  dev
spec:
  selector:
    app:  dev
  ports:
  - port: 6500
    protocol: TCP
    targetPort: 6500
